# myoconverter

./: .readthedocs.yaml  README.md  conda_env.yml  pyproject.toml
.github/workflows/: python-app.yml
colab/: colab_example.ipynb
docker/: Dockerfile  README.md  entrypoint.sh
docs/: CONTRIBUTING.md  requirements.txt
docs/source/: conf.py  index.rst  install.rst  limitations.rst  models.rst  pipeline.rst  plans.rst  step1.rst  step2.rst  step3.rst  usage.rst
examples/: arm26.py  cli.py  example_models_convert.py  gait10dof18musc.py  gait23dof54musc.py  leg6dof9musc.py  neck6dof.py  tug_of_war.py
models/mjc/Arm26/: arm26_cvt1.xml  arm26_cvt2.xml  arm26_cvt3.xml
models/mjc/Gait10dof18musc/: gait10dof18musc_cvt1.xml  gait10dof18musc_cvt2.xml  gait10dof18musc_cvt3.xml
models/mjc/Gait2354Simbody/: gait2354_cvt1.xml  gait2354_cvt2.xml  gait2354_cvt3.xml
models/mjc/Leg6Dof9Musc/: leg6dof9musc_cvt1.xml  leg6dof9musc_cvt2.xml  leg6dof9musc_cvt3.xml
models/mjc/Neck6D/: neck6d_cvt1.xml  neck6d_cvt2.xml  neck6d_cvt3.xml
models/mjc/TugOfWar/: tugofwar_cvt1.xml  tugofwar_cvt2.xml  tugofwar_cvt3.xml
models/mjc_speedy/Arm26/: arm26_cvt2.xml  arm26_cvt3.xml
models/mjc_speedy/Leg6Dof9Musc/: leg6dof9musc_cvt1.xml  leg6dof9musc_cvt2.xml  leg6dof9musc_cvt3.xml
models/osim/Arm26/: arm26.osim
models/osim/Neck6D/: license  (+4 more)
myoconverter/: O2MPipeline.py  __init__.py
myoconverter/conversion_steps/: O2MStep1.py  O2MStep2.py  O2MStep3.py  O2MSteps.py
myoconverter/tests/: O2M_Utils.py  generate_pdf_test.py  joint_range_test.py  model_unit_test.py  pkl_data_structure_exame.py
myoconverter/utils/: generate_pdf.py
myoconverter/xml/: config.py  converter.py  parsers.py  template.xml  utils.py
(+578 files in other folders)
