[tool.poetry]
name = "myoconverter"
version = "1.0.0"
description = ""
authors = ["rogervankanten <roger.van.kanten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
loguru = "^0.7.2"
lxml = "^4.9.3"
trimesh = "^4.0.3"
fpdf2 = "^2.7.6"
pyvista = "^0.42.3"
networkx = "^3.2.1"
mujoco = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
