[tool.poetry]
name = "myoconverter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "==1.23.5"
mujoco = "==2.3.6"
lxml = "^5.2.2"
loguru = "^0.7.2"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
trimesh = "^4.4.3"
pyvista = "^0.44.1"
networkx = "^3.3"
fpdf2 = "^2.7.9"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
